# bad-apple

./: CMakeLists.txt  README.md  main.cpp
cmake/: Findlibvlc.cmake
resources/: video.frag  video.vert
shaders/: donut.frag  donut.vert
